Bug 1417113 - CloneableWithRangeMediaResource InputStreamReader::Read must always return what has been read from the buffer, r=jya a=gchang

Before this patch, InputStreamReader::Read was returning NS_OK without updating
aRead if SyncRead() was unable to read the requested amount of data from the
stream. Just because SyncRead() was executing in a do/while loop, we must
always update aRead with what was been read so far.